# santa

./: .gitignore  LICENSE  christmas.cabal  pysanta.py  run_tests  stack.yaml
app/: Main.hs
src/: ResultWriter.hs  Santa.hs  santa.py
test/: Spec.hs  test_santa.py
