name:                christmas
version:             0.1
synopsis:            Solution to the company Christmas Challenge
homepage:            https://github.com/davidsteiner/christmas
license:             BSD3
license-file:        LICENSE
author:              David Steiner
maintainer:          david_j_steiner@yahoo.co.nz
copyright:           2017 David Steiner
category:            Maths
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://gitlab.com/davidsteiner/santa#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Santa
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable christmas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , christmas
  default-language:    Haskell2010

test-suite christmas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , christmas
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/christmas
